--- a/src/components/Weather/Weather.css
+++ b/src/components/Weather/Weather.css
@@ -3,9 +3,14 @@
     border-radius: 10px;
     padding: 10px;
     width: 320px;
-    height: 200px;
+    max-height: 200px;
+    min-height: 150px;
     font-size: 1rem;
     text-align: center;
+}
+
+#container-weather img{
+    height: 50px;
 }
 
 .light #container-weather{
