--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -1,18 +1,16 @@
 #welcome-message{
     width: 100%;
-    height: 100%;
+    height: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: end;
+    justify-content: center;
     gap: 1rem;
     font-size: 1.3rem;
-    padding-top: 2rem;
 }
 
 #welcome-message > img{
-    padding: 1rem;
-    height: 300px;
+    height: 250px;
 }
 
 #welcome-message > p{
@@ -22,7 +20,6 @@
 /* Responsive */
 @media (max-width: 780px){
     #welcome-message{
-        padding-top: 0;
         gap: 0.5rem;
         justify-content: start;
     }
